--- a/lesson/templates/lesson/lesson_detail.html
+++ b/lesson/templates/lesson/lesson_detail.html
@@ -31,7 +31,7 @@
                 </p>
                 <hr />
                 <!-- Displaying Note of the User debug via AI -->
-                <div class="row">
+                <!-- <div class="row">
                     {% with note_found=False %}
                     {% for note in notes %}
                     {% if note.title == section.title %}
@@ -52,7 +52,7 @@
                     <p>No notes found for this section.</p>
                     {% endif %}
                     {% endwith %}
-                </div>
+                </div> -->
                 {% endfor %}
             </div>
         </div>
