--- a/lesson/templates/lesson/lesson_detail.html
+++ b/lesson/templates/lesson/lesson_detail.html
@@ -11,6 +11,9 @@
                 <h1 class="lesson-title">{{ lesson.title }}</h1>
                 <!-- Post author goes before the | the post's created date goes after -->
                 <p class="lesson-subtitle">{{ lesson.author }} | {{ lesson.created_on }}</p>
+                {% if user.is_authenticated and user == lesson.author %}
+                    <a href="{% url 'lesson_edit' lesson.slug %}" class="btn btn-edit">Edit Lesson</a>
+                {% endif %}
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <img src="{% static 'images/AmazingTutors.jpg' %}" class="scale" alt="placeholder">
