Fix Chores with user

--- a/lesson/templates/lesson/index.html
+++ b/lesson/templates/lesson/index.html
@@ -33,9 +33,9 @@
                             <p class="author">Author: {{ lesson.author }}</p>
                         </div>
                     </div>
-                    <a href="{% url 'lesson_detail' lesson.slug %}" class="lesson-link">
-                        <h2 class="card-title">{{ lesson.title }}</h2>
-                        <p class="card-text">{{ lesson.excerpt }}</p>
+                    <a href="{% url 'lesson_detail' lesson.slug %}" class="lesson-link {% if lesson.status == 0 %}faded{% endif %}">
+                        <h2 class="card-title {% if lesson.status == 0 %}faded{% endif %}">{{ lesson.title }}</h2>
+                        <p class="card-text {% if lesson.status == 0 %}faded{% endif %}">{{ lesson.excerpt }}</p>
                     </a>
                     <p class="card-text text-muted h6">{{ lesson.created_on }}</p>
                 </div>
