--- a/lesson/templates/lesson/lesson_create.html
+++ b/lesson/templates/lesson/lesson_create.html
@@ -1,14 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Create Lesson</title>
-</head>
-<body>
-    <h1>Create Lesson</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save</button>
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+
+{% block content %}
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6 my-5">
+            <h2>Create Lesson</h2>
+            <p></p>
+
+            <!-- add your form here. Your submit button should 
+                                have the classes of btn, btn-secondary -->
+            <form method="post">
+                {% csrf_token %}
+                <!-- {{ form.as_p }} -->
+                {{ form | crispy }}
+                <button class="btn btn-secondary" type="submit">Save</button>
+            </form>
+        </div>
+    </div>
+</div>
+{% endblock content %}
