--- a/templates/base.html
+++ b/templates/base.html
@@ -112,11 +112,22 @@
             <i class="fab fa-youtube-square ms-3"></i>
         </p>
     </footer>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
         </script>
-    <script src="{% static 'js/script.js' %}"></script>
-</body>
+    {% block extras %}{% endblock %}
+    <!-- Add this script to make messages fade away -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            setTimeout(function() {
+                var alerts = document.querySelectorAll('.alert');
+                alerts.forEach(function(alert) {
+                    var bsAlert = new bootstrap.Alert(alert);
+                    bsAlert.close();
+                });
+            }, 5000); // Adjust the time (5000ms = 5 seconds) as needed
+        });
+    </script>
 
 </html>
