--- a/lesson/templates/lesson/index.html
+++ b/lesson/templates/lesson/index.html
@@ -18,7 +18,7 @@
                         <h2 class="card-title">Create Lesson</h2>
                         <p class="card-text">lesson excerpt</p>
                     </a>
-                    <p class="card-text text-muted h6 faded">current date</p>
+                    <p class="card-text text-muted h6 faded">time stamp</p>
                 </div>
             </div>
         </div>
