--- a/lesson/templates/lesson/lesson_edit.html
+++ b/lesson/templates/lesson/lesson_edit.html
@@ -3,19 +3,12 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container">
 
-    <div class="row">
-        <div class="col text-right">
-            <!-- Updated on field goes in here -->
-
-            <!-- <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p> -->
-        </div>
-    </div>
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6 my-5">
+        <div class="col-12 col-md-6 text-center">
             <h2>Edit Lesson</h2>
-            <p>Update or Delete lesson</p>
+            <p>You can <em>Update</em> or <em>Delete</em> the lesson here! <br>Resize the content editor to/from fullscreen if needed by toggling the fullscreen icon on the toolbar!</p>
 
             <!-- add your form here. Your submit button should 
                                 have the classes of btn, btn-secondary -->
