udpate Question Answer model

--- a/lesson/templates/lesson/lesson_edit.html
+++ b/lesson/templates/lesson/lesson_edit.html
@@ -8,7 +8,7 @@
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 text-center">
             <h2>Edit Lesson</h2>
-            <p>You can <em>Update</em> or <em>Delete</em> the lesson here! <br>Resize the content editor to/from fullscreen if needed by toggling the fullscreen icon on the toolbar!</p>
+            <p>You can <em>Update</em> or <em>Delete</em> the lesson here! <br>Toggling the fullscreen icon on the toolbar to resize the content editor to/from fullscreen if like!</p>
 
             <!-- add your form here. Your submit button should 
                                 have the classes of btn, btn-secondary -->
