--- a/lesson/templates/lesson/lesson_detail.html
+++ b/lesson/templates/lesson/lesson_detail.html
@@ -11,9 +11,16 @@
                 <h1 class="lesson-title">{{ lesson.title }}</h1>
                 <!-- Post author goes before the | the post's created date goes after -->
                 <p class="lesson-subtitle">{{ lesson.author }} | {{ lesson.created_on }}</p>
+                <!-- Edit Lesson Button-->
                 {% if user.is_authenticated and user == lesson.author %}
                     <a href="{% url 'lesson_edit' lesson.slug %}" class="btn btn-edit">Edit Lesson</a>
                 {% endif %}
+                <!-- Raise Question Button -->
+                {% if user.is_authenticated %}
+                    <a href="{% url 'question_create' lesson.slug %}" class="btn btn-edit">Raise Question</a>
+                {% endif %}
+
+
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <img src="{% static 'images/AmazingTutors.jpg' %}" class="scale" alt="placeholder">
@@ -81,6 +88,79 @@
                 </div>
                 {% endif %}
             </div>
+        </div>
+    </div>
+    <hr />
+
+    <!--Display Questions -->
+    <div class="row">
+        <div class="col">
+            <h2>Class Activities</h2>
+            
+            <!-- Questions with both "Test" and due_date -->
+            {% for question in questions %}
+                {% if question.questiontype == 1 and question.due_date %}
+                <div class="card mb-3 testB">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <div class="d-flex justify-content-between">
+                                <span>{{ question.body }}</span>
+                                <span>asked by {{ question.owner }} - {{ question.updated_on }}</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+            {% endfor %}
+            
+            <!-- Questions with only "Test" -->
+            {% for question in questions %}
+                {% if question.questiontype == 1 and not question.due_date %}
+                <div class="card mb-3 testA">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <div class="d-flex justify-content-between">
+                                <span>{{ question.body }}</span>
+                                <span>asked by {{ question.owner }} - {{ question.updated_on }}</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+            {% endfor %}
+            
+            <!-- Tutor's discussion questions -->
+            {% for question in questions %}
+                {% if question.questiontype == 0 and question.owner == lesson.author %}
+                <div class="card mb-3 discussionA">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <div class="d-flex justify-content-between">
+                                <span>{{ question.body }}</span>
+                                <span>asked by {{ question.owner }} - {{ question.updated_on }}</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+            {% endfor %}
+            
+            <!-- Learner's discussion questions -->
+            {% for question in questions %}
+                {% if question.questiontype == 0 and question.owner != lesson.author %}
+                <div class="card mb-3 discussionB">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <div class="d-flex justify-content-between">
+                                <span>{{ question.body }}</span>
+                                <span>asked by {{ question.owner }} - {{ question.updated_on }}</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+            {% endfor %}
+            
         </div>
     </div>
 </div>
