--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,7 +166,7 @@ body {
 
 /* test question*/
 .testA {
-    background-color: #00bbf9;
+    background-color: #f7a072;
 }
 
 /* assignment with duedate */
@@ -176,7 +176,7 @@ body {
 
 /* tutor discussion */
 .discussionA {
-    background-color: #0fa3b1;
+    background-color: #00bbf9;
 }
 
 /* student discussion */
